--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,9 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_current_music_track">Playing now</string>
 
-    <string name="home_second">Home Second</string>
     <string name="music_title">Music title</string>
     <string name="album_cover_image_description">Album cover</string>
     <string name="search_bar_label">Recherche</string>
 
-    <string name="current_song_title">Title of the music being played</string>
+    <string name="current_song_title">Title of the song being played</string>
 </resources>
