Implementing play and pause

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,5 @@
     <string name="album_cover_image_description">Album cover</string>
     <string name="search_bar_label">Recherche</string>
 
-    <string name="current_song_title">Title of the song being played</string>
+    <string name="current_song_title">-</string>
 </resources>
